draft-packages/button/KaizenDraft/Button/components/GenericButton.module.scss
@import "../styles";

.container {
  @extend %caButtonContainer;
}

.button {
  @extend %caButton;
}

.primary {
  @extend %caButtonPrimary;
}

.secondary {
  @extend %caButtonSecondary;
}

.iconButton {
  @extend %caButtonIconButton;
}

.destructive {
  @extend %caButtonDestructive;
}

.form {
  @extend %caButtonForm;
}

.reversed {
  @extend %caButtonReversed;
}

.reverseColorCluny {
  @extend %caButtonReverseColorCluny;
}

.reverseColorPeach {
  @extend %caButtonReverseColorPeach;
}

.reverseColorSeedling {
  @extend %caButtonReverseColorSeedling;
}

.reverseColorWisteria {
  @extend %caButtonReverseColorWisteria;
}

.reverseColorYuzu {
  @extend %caButtonReverseColorYuzu;
}

.content {
  @extend %caButtonContent;
}

.label {
  @extend %caButtonLabel;
}

.fullWidth {
  width: 100%;

  .button {
    width: 100%;
    justify-content: center;
  }

  .content {
    justify-content: center;
  }
}

.iconWrapper {
  @extend %caButtonIconWrapper;
}

.additionalContentWrapper {
  @extend %caButtonAdditionalContentWrapper;
}

.destructiveModifier.destructiveModifier {
  @extend %caButtonDestructiveModifier;
}

.centeredLoadingSpinner {
  position: absolute;
  left: 0;
  right: 0;
  display: flex;
  justify-content: center;
}

.hidden {
  visibility: hidden;
}

